--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "piassi/solidpress",
+  "version": "1.0.0",
   "description": "Solid foundation for wordpress themes",
   "type": "library",
   "license": "MIT",
